--- a/gb/20/1/4/n11767770.md
+++ b/gb/20/1/4/n11767770.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cnijoq354/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cnijoq354/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/cnijoq354/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cnijoq354/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/cnijoq354/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cnijoq354/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/cnijoq354/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cnijoq354/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/cnijoq354/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cnijoq354/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/cnijoq354/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cnijoq354/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/cnijoq354/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cnijoq354/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/cnijoq354/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cnijoq354/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/cnijoq354/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cnijoq354/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/cnijoq354/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cnijoq354/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cnijoq354/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cnijoq354/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cnijoq354/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cnijoq354/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cufnqn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵以舞叙事 豪华轿车公司老板盛赞</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/200104023742100055-600x400.jpg" />
 <h6>2020年1月3日晚，豪华轿车出租公司老板Frank Tribble和太太Teri Brennan一起观看了神韵环球艺术团在旧金山歌剧院观的第五场演出。（于丽丽／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年01月04日讯】（大纪元记者于丽丽美国旧金山报导）豪华轿车出租公司老板Frank Tribble和太太Teri Brennan一起观看了<ahref="https://github.com/cnijoq354/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球<ahref="https://github.com/cnijoq354/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF.md#1">艺术</a>团于2020年1月3日晚在<ahref="https://github.com/cnijoq354/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">旧金山歌剧院</a>（San Francisco War Memorial Opera House）的第五场演出。</p>
-<p>Tribble表示，演出让他陶醉其中，非常享受，“我感觉自己也成了画中人，成为他们的一员。那画面简直就是<ahref="https://github.com/cnijoq354/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF.md#1">艺术</a>杰作。”<ahref="https://github.com/cnijoq354/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a><ahref="https://github.com/cnijoq354/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>演员超凡入圣的技艺，留给他深刻的印象，特别是女舞蹈演员在台上移动的步伐，“哪里像是在走步，分明是在滑翔，优雅极了！”</p>
-<p>神韵演出以<ahref="https://github.com/cnijoq354/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>形式讲述故事，为观众呈现古代的传奇和当代的故事。Tribble夫妇非常喜欢。修炼人遭迫害的那一幕，让太太Brennan感到有些悲伤。她说，“这个演出竟然不能在诞生这种舞蹈的国家－－中国上演，不能展现他们自己的文化。”这让她感到不可思议，并希望中国能够尽早得到改变，“这是一桩令人伤心难过的事情。”</p>
+	<p>【大纪元2020年01月04日讯】（大纪元记者于丽丽美国旧金山报导）豪华轿车出租公司老板Frank Tribble和太太Teri Brennan一起观看了<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF.md#1">艺术</a>团于2020年1月3日晚在<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">旧金山歌剧院</a>（San Francisco War Memorial Opera House）的第五场演出。</p>
+<p>Tribble表示，演出让他陶醉其中，非常享受，“我感觉自己也成了画中人，成为他们的一员。那画面简直就是<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF.md#1">艺术</a>杰作。”<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a><ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>演员超凡入圣的技艺，留给他深刻的印象，特别是女舞蹈演员在台上移动的步伐，“哪里像是在走步，分明是在滑翔，优雅极了！”</p>
+<p>神韵演出以<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>形式讲述故事，为观众呈现古代的传奇和当代的故事。Tribble夫妇非常喜欢。修炼人遭迫害的那一幕，让太太Brennan感到有些悲伤。她说，“这个演出竟然不能在诞生这种舞蹈的国家－－中国上演，不能展现他们自己的文化。”这让她感到不可思议，并希望中国能够尽早得到改变，“这是一桩令人伤心难过的事情。”</p>
 <p>Brennan对神韵演出丰富的舞蹈和舞蹈形式，感到耳目一新。“这完全不同于我们从小就习惯的西方舞蹈，让人学有裨益。”她说，“不同舞蹈所呈现的不同文化，让人受到陶冶启发。舞蹈演员动作的精准一致让人钦佩。他们一定是日复一日，年复一年地训练出来的。”她说，“而这正是我们西方国家非常需要的。”</p>
 <p>Tribble对神韵演出以舞蹈讲述故事的方式，非常着迷。“我能理解那些不同的故事。他们全用舞蹈来表达，没有言语，一切却尽在其中。这让我从这个文化中学到很多。”Tribble表示，“演出让我感到与中国相连。”“神韵舞蹈一言不发却向我们展示了古老文化的浩瀚精深。”</p>
 <p>Brennan表示，这是先生送给她的绝好的圣诞节礼物。</p>
@@ -18,38 +18,37 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/1/3/n11765577.md#1">传统永驻心中 建筑事务所老板感谢神韵</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/1/3/n11765744.md#1">“神韵是神的使者”牙医院长心灵被抚慰</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/1/3/n11765818.md#1">神韵精彩绝伦的演出 公司总监叹为观止</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/1/3/n11765834.md#1">“观神韵是神的恩赐”旧金山精英深受启迪</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/1/3/n11765891.md#1">绝美艺术 社会精英受感动 推荐大家看神韵</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/1/3/n11766226.md#1">被善包覆全身 医院院长观神韵感动流泪</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/1/3/n11765577.md#1">传统永驻心中 建筑事务所老板感谢神韵</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/1/3/n11765744.md#1">“神韵是神的使者”牙医院长心灵被抚慰</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/1/3/n11765818.md#1">神韵精彩绝伦的演出 公司总监叹为观止</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/1/3/n11765834.md#1">“观神韵是神的恩赐”旧金山精英深受启迪</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/1/3/n11765891.md#1">绝美艺术 社会精英受感动 推荐大家看神韵</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/1/3/n11766226.md#1">被善包覆全身 医院院长观神韵感动流泪</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/11/n10903516.md#1" target="_blank">观雨堂主：一位历史学家在生命终点的“争宠”</a></li><li><a href="https://github.com/cnijoq354/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/5/n10617345.md#1" target="_blank">婆媳恩怨千千结 一本宝书解枷锁</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/22/n10994378.md#1" target="_blank">陆文：迫害佛法最终害了自己</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/23/n10871477.md#1" target="_blank">感恩节 来自西方人的最美好心愿</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/7/19/n12266721.md#1">【翻墙必看】官媒终于承认三峡大坝变形</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/7/20/n12269442.md#1">张雅琴批三倍券是失败政策 台行政院回应了</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/7/19/n12268109.md#1">【新闻第一现场】洪水猛涨 中共承认三峡大坝变形</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/7/19/n12267854.md#1">【役情最前线】风水师：土龙逃走 四大危机齐来</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/7/20/n12268960.md#1">中共官媒对李克强讲话的报导口径不一</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/7/18/n12266356.md#1">女歌手染疫牵连TVB百人 病毒攻入港娱乐圈</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/7/20/n12270541.md#1">欧阳娜娜拍大陆综艺节目 突扑主持人怀中痛哭</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/7/18/n12265807.md#1">《尸速列车：感染半岛》影评：险恶的人心 比僵尸更可怕</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/7/19/n12267717.md#1">火锅店装修抄袭引热议 郑恺从头到尾参与管理</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/7/19/n12268045.md#1">港娱乐圈现感染群组 70岁薛家燕坦言心惊</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/7/16/n12259901.md#1">巴西男子在树干中发现耶稣像 网民：神迹</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/9/4/4/n2484948.md#1">从《清明上河图》看时代风华（上）</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/7/10/n12246218.md#1">线上展览：罕见的贝多芬亲笔手稿</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/7/20/n12270512.md#1">为何人们说早夭的儿女是讨债鬼？</a></li>
-<li><a href="https://github.com/cnijoq354/djy/blob/master/gb/20/7/20/n12270583.md#1">苏东坡前世为和尚 黄庭坚由信佛女子转生</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cnijoq354/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cnijoq354/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/4/n11767770.htm">神韵以舞叙事 豪华轿车公司老板盛赞</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/4/n11767770.htm">神韵以舞叙事 豪华轿车公司老板盛赞</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/cnijoq354/djy/blob/master/gb/20/1/4/n11767770.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cnijoq354/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cnijoq354/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cnijoq354/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cnijoq354/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cnijoq354/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cufnqn370/djy/blob/master/gb/20/1/4/n11767770.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
